--- a/Project/src/scss/layout/_navbar.scss
+++ b/Project/src/scss/layout/_navbar.scss
@@ -1,9 +1,6 @@
 header {
-  position: fixed;
-  top: 46px;
-  left: 0;
-  right: 0;
-  z-index: 9999;
+
+  @include position($position:fixed,$top:46px,$left:0,$right:0,$z_index:9999);
   .logo {
     width: 72px;
     height: 31px;
@@ -25,9 +22,8 @@ header {
       justify-content: space-around;
       li {
         position: relative;
-        color: $white-color;
         padding: 13px 17px;
-        font-size: 14px;
+        @include text($f_size:14px , $f_style:normal ,$f_weight:400,$line_h:120%,$color:$white-color);   
         cursor: pointer;
         @media (max-width: 988px) {
           padding: 12px 8px;
@@ -181,11 +177,7 @@ header {
   }
   .mobile_items {
     transition: .4s ease-in-out;
-    position: fixed;
-    top: 0;
-    left: -200%;
-    bottom: 0;
-    z-index: 99999;
+    @include position($position:fixed,$top:0px,$left:-200%,$bottom:0,$z_index:9999);
     width: 70%;
     height: 100vh;
     padding: 50px 30px;
@@ -218,13 +210,9 @@ header {
         }
       }
       a{
-        color: #FFF;
 text-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.25);
-
-font-size: 14px;
-font-style: normal;
-font-weight: 400;
-line-height: 120%;
+@include text($f_size:14px , $f_style:normal ,$f_weight:400,$line_h:120%,$color:$white-color);
+          
       }
     }
   }
