--- a/Project/src/scss/pages/_home.scss
+++ b/Project/src/scss/pages/_home.scss
@@ -35,7 +35,7 @@ main{
           padding-left: 70px;
           width: 100%;
           height: 100%;
-          top: -40px;
+          top: -80px;
           .swiper-slide {
             text-align: center;
             font-size: 18px;
@@ -149,7 +149,7 @@ main{
             border-radius: 50%;
             background-color: rgba(0, 0, 0, 0.644);
             &::after {
-              color: white;
+              color: $white-color;
               font-size: 30px;
             }
           }
@@ -163,13 +163,13 @@ main{
             border-radius: 50%;
             background-color: rgba(0, 0, 0, 0.644);
             &::after {
-              color: white;
+              color: $white-color;
               font-size: 30px;
             }
           }
         }
         .mySwiper_second{
-          top: -100px;
+          top: -90px;
         }
       }
 }
@@ -202,7 +202,7 @@ main{
             justify-content: center;
             align-items: center;
             i{
-                color: #FFF;
+                color: $white-color
             }
         }
         .form_head{
@@ -230,9 +230,9 @@ main{
                     @extend %bordergradient;
                     width: 100%;
                     border-radius: 8px;
-background: #0D0D0D;
+background: $black-color;
 padding: 10px 30px;
-color: #FFF;
+color: $white-color;
                 }
             }
             .forgot{
@@ -244,7 +244,7 @@ color: #FFF;
                 transition: .3s ease-in-out;
                 &:hover{
                     cursor: pointer;
-                    color: #0cf9f0;
+                    color: $gradient-first;
                 }
              }
             }
@@ -259,9 +259,15 @@ color: #FFF;
                     background-color: transparent;
                     border: none;
                     border-radius:55px ;
-                    color: #FFF;
+                    color: $white-color;
+                    transition: .5s ease-in-out;
                     &:nth-child(2){
                         @extend %blurbackground; 
+                        @extend %bordergradient;
+                    }
+                    &:hover{
+                      @extend %bordergradient;
+                      @extend %blurbackground; 
                     }
                 }
             }
